fix(user): Resolve type conflicts and query issues in user-related services