@@ -6,6 +6,7 @@ import housingManagment.hms.entities.property.BaseProperty;
 import housingManagment.hms.entities.userEntity.BaseUser;
 import housingManagment.hms.enums.LeaseStatus;
 import housingManagment.hms.service.LeaseService;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -18,121 +19,123 @@ import org.springframework.web.bind.annotation.*;
 import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 
-@Controller
-@RequestMapping("/leases")
+@RestController
+@RequestMapping("/api/leases")
 @RequiredArgsConstructor
+@Tag(name = "Leases Management", description = "APIs for managing leases")
 public class LeaseController {
+
     private final LeaseService leaseService;
 
     @PostMapping
-    public Lease createLease(@RequestBody LeaseCreateDTO dto) {
-        return leaseService.createLease(dto);
+    public ResponseEntity<Lease> createLease(@RequestBody LeaseCreateDTO dto) {
+        Lease createdLease = leaseService.createLease(dto);
+        return ResponseEntity.status(HttpStatus.CREATED).body(createdLease);
     }
-    // Обновление договора аренды по id
+
     @PutMapping("/{id}")
-    public Lease updateLease(@PathVariable UUID id, @RequestBody Lease lease) {
-        return leaseService.updateLease(id, lease);
+    public ResponseEntity<Lease> updateLease(@PathVariable UUID id, @RequestBody Lease lease) {
+        Lease updated = leaseService.updateLease(id, lease);
+        return ResponseEntity.ok(updated);
     }
 
-    // Удаление договора аренды по id
     @DeleteMapping("/{id}")
-    public void deleteLease(@PathVariable UUID id) {
+    public ResponseEntity<Void> deleteLease(@PathVariable UUID id) {
         leaseService.deleteLease(id);
+        return ResponseEntity.noContent().build();
     }
 
-    // Получение договора аренды по id
-
-    // Получение всех договоров аренды
     @GetMapping
-    public String listLeases(Model model,
-                             @RequestParam(required = false) String status,
-                             @RequestParam(required = false) String search,
-                             @RequestParam(defaultValue = "0") int page,
-                             @RequestParam(defaultValue = "10") int size) {
+    public ResponseEntity<Map<String, Object>> listLeases(
+            @RequestParam(required = false) String status,
+            @RequestParam(required = false) String search,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size) {
+
         LeaseStatus leaseStatus = null;
         if (status != null && !status.isEmpty()) {
             try {
                 leaseStatus = LeaseStatus.valueOf(status.toUpperCase());
             } catch (IllegalArgumentException e) {
-                // Если передан неверный статус, оставляем фильтр пустым (или можно логировать ошибку)
+                return ResponseEntity.badRequest().body(Map.of("error", "Invalid lease status: " + status));
             }
         }
 
         Pageable pageable = PageRequest.of(page, size);
         Page<Lease> leasePage = leaseService.getLeasesPaginated(pageable, leaseStatus, search);
 
-        model.addAttribute("leases", leasePage.getContent());
-        model.addAttribute("currentPage", leasePage.getNumber());
-        model.addAttribute("totalPages", leasePage.getTotalPages());
-        model.addAttribute("pageSize", leasePage.getSize());
-        model.addAttribute("totalItems", leasePage.getTotalElements());
-        model.addAttribute("availableSizes", List.of(10, 20, 30, 40));
+        Map<String, Object> response = new HashMap<>();
+        response.put("leases", leasePage.getContent());
+        response.put("currentPage", leasePage.getNumber());
+        response.put("totalPages", leasePage.getTotalPages());
+        response.put("pageSize", leasePage.getSize());
+        response.put("totalItems", leasePage.getTotalElements());
 
-        return "leases/list";
+        return ResponseEntity.ok(response);
     }
 
     @GetMapping("/{id}")
-    public String viewLease(@PathVariable UUID id, Model model) {
+    public ResponseEntity<Lease> viewLease(@PathVariable UUID id) {
         Lease lease = leaseService.getLeaseById(id);
-        model.addAttribute("lease", lease);
-        return "leases/view";
+        return ResponseEntity.ok(lease);
     }
 
     @GetMapping("/property/{propertyId}")
-    public List<BaseProperty> getUniquePropertiesByLease(@PathVariable UUID propertyId) {
-        return leaseService.getLeasesByProperty(propertyId)
+    public ResponseEntity<List<BaseProperty>> getUniquePropertiesByLease(@PathVariable UUID propertyId) {
+        List<BaseProperty> properties = leaseService.getLeasesByProperty(propertyId)
                 .stream()
                 .map(Lease::getProperty)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
+        return ResponseEntity.ok(properties);
     }
 
     @GetMapping("/tenant/{tenantId}")
-    public List<BaseUser> getUniqueTenantsByLease(@PathVariable UUID tenantId) {
-        return leaseService.getLeasesByTenant(tenantId)
+    public ResponseEntity<List<BaseUser>> getUniqueTenantsByLease(@PathVariable UUID tenantId) {
+        List<BaseUser> tenants = leaseService.getLeasesByTenant(tenantId)
                 .stream()
                 .map(Lease::getTenant)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
+        return ResponseEntity.ok(tenants);
     }
 
-    // Получение договоров с заданным статусом
     @GetMapping("/status/{status}")
-    public List<Lease> getLeasesByStatus(@PathVariable LeaseStatus status) {
-        return leaseService.getLeasesByStatus(status);
+    public ResponseEntity<List<Lease>> getLeasesByStatus(@PathVariable LeaseStatus status) {
+        return ResponseEntity.ok(leaseService.getLeasesByStatus(status));
     }
 
-    // Получение активных договоров
     @GetMapping("/active")
-    public List<Lease> getActiveLeases() {
-        return leaseService.getActiveLeases();
+    public ResponseEntity<List<Lease>> getActiveLeases() {
+        return ResponseEntity.ok(leaseService.getActiveLeases());
     }
 
-    // Получение договоров, срок действия которых истекает
     @GetMapping("/expiring")
-    public List<Lease> getExpiringLeases() {
-        return leaseService.getExpiringLeases();
+    public ResponseEntity<List<Lease>> getExpiringLeases() {
+        return ResponseEntity.ok(leaseService.getExpiringLeases());
     }
 
-    // Продление договора аренды: обновление даты окончания
     @PutMapping("/{id}/renew")
-    public Lease renewLease(@PathVariable UUID id,
-                            @RequestParam("newEndDate") 
-                            @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate newEndDate) {
-        return leaseService.renewLease(id, newEndDate);
+    public ResponseEntity<Lease> renewLease(@PathVariable UUID id,
+                                            @RequestParam("newEndDate")
+                                            @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate newEndDate) {
+        Lease renewed = leaseService.renewLease(id, newEndDate);
+        return ResponseEntity.ok(renewed);
     }
 
     @PutMapping("/{id}/terminate")
-    public Lease terminateLease(@PathVariable UUID id,
-                                @RequestParam("terminationDate")
-                                @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate terminationDate) {
-        return leaseService.terminateLease(id, terminationDate);
+    public ResponseEntity<Lease> terminateLease(@PathVariable UUID id,
+                                                @RequestParam("terminationDate")
+                                                @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate terminationDate) {
+        Lease terminated = leaseService.terminateLease(id, terminationDate);
+        return ResponseEntity.ok(terminated);
     }
 
-    // Поиск договоров по ключевому слову
     @GetMapping("/search")
-    public List<Lease> searchLeases(@RequestParam String keyword) {
-        return leaseService.searchLeases(keyword);
+    public ResponseEntity<List<Lease>> searchLeases(@RequestParam String keyword) {
+        return ResponseEntity.ok(leaseService.searchLeases(keyword));
     }
 }
